--- a/src/ui/Views/Organisation/Shared/_OrganisationDetailsLayout.cshtml
+++ b/src/ui/Views/Organisation/Shared/_OrganisationDetailsLayout.cshtml
@@ -6,8 +6,8 @@
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @await RenderSectionAsync("organisationName", required: true)
-  @Html.PartialAsync("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
-  @Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
+  @await Html.PartialAsync("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
+  @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
   <div class="govuk-tabs">
     <h2 class="govuk-tabs__title">Contents</h2>
     @await RenderSectionAsync("tabs", required: true)
