better No content copied message

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -46,11 +46,18 @@ $govuk-global-styles: true;
 }
 
 // inset success
-.govuk-inset-text--success{
+.govuk-inset-text--success,
+.govuk-inset-text--failure {
   border-left-width: 5px;
-  border-left-color: govuk-colour("green");
   padding-top: 0;
   padding-bottom:0;
+}
+
+.govuk-inset-text--success {
+  border-left-color: govuk-colour("green");
+}
+.govuk-inset-text--failure {
+  border-left-color: govuk-colour("red");
 }
 
 // Add a red border to .form-control-group if validation fails
