--- a/src/ui/Views/Shared/CopyCourseContent.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContent.cshtml
@@ -12,25 +12,26 @@ else
 {  
   <h4 class="govuk-heading-m">Use content from another course</h4>
   <p class="govuk-body">Fill in this page with content from another course.</p>
-  @if(copied != null)
+  @if(copied != null && copied.Any())
   {
-    <div class="govuk-inset-text govuk-inset-text--success" role="alert" aria-labelledby="success-summary-heading-example-1">
-      <h3 class="govuk-heading-s" id="success-summary-heading-example-1">
+    <div class="govuk-inset-text govuk-inset-text--success" role="alert" aria-labelledby="success-summary-heading">
+      <h3 class="govuk-heading-s" id="success-summary-heading">
         Fields copied:
       </h3>
       <ul class="govuk-list">
-        @if(copied.Any())
-        {
-          foreach(var copiedField in copied)
+          @foreach(var copiedField in copied)
           {
             <li>@copiedField</li>
-          }
-        }
-        else
-        {
-          <li>None</li>
-        }
+          }        
       </ul>
+    </div>
+  }
+  else if (copied != null)
+  {
+    <div class="govuk-inset-text govuk-inset-text--failure" role="alert" aria-labelledby="failure-summary-heading">
+      <h3 class="govuk-heading-s" id="failure-summary-heading">
+        There was no content to copy.
+      </h3>
     </div>
   }
   <form class="govuk-form" method="GET">
