--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -58,7 +58,6 @@
       <table class="ucas-info-table govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th class="govuk-table__header ucas-info-table__code-col" scope="col">Code</th>
             <th class="govuk-table__header ucas-info-table__subject-col" scope="col">Subject</th>
             <th class="govuk-table__header ucas-info-table__type-col" scope="col">Type</th>
             <th class="govuk-table__header ucas-info-table__type-col" scope="col">Status</th>
@@ -69,10 +68,8 @@
         @foreach (var course in provider.Courses)
         {
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">@course.CourseCode</td>
-
             <td class="govuk-table__cell">
-              <a href="@Url.Action("variants", "course", new {instCode = Model.InstitutionId, accreditingProviderId = course.AccreditingProviderId, ucasCode = course.CourseCode})" class="govuk-link">@course.Name</a>
+              <a href="@Url.Action("variants", "course", new {instCode = Model.InstitutionId, accreditingProviderId = course.AccreditingProviderId, ucasCode = course.CourseCode})" class="govuk-link">@course.Name (@course.CourseCode)</a>
             </td>
             <td class="govuk-table__cell">@course.GetCourseVariantType()</td>
             <td class="govuk-table__cell">@course.GetCourseStatus()</td>
