--- a/src/ui/Views/Course/Fees.cshtml
+++ b/src/ui/Views/Course/Fees.cshtml
@@ -1,6 +1,7 @@
 @model CourseFeesEnrichmentViewModel
 @{
-  Layout = "_Layout";
+  Layout = "_Layout";  
+  ViewBag.Title = $"Fees for course {Model.CourseInfo.Name} ({Model.CourseInfo.ProgrammeCode})";
   var course_length = ViewData.ModelState["CourseLength"] != null && ViewData.ModelState["CourseLength"].Errors.Any();
   var fee_uk_eu = ViewData.ModelState["FeeUkEu"] != null && ViewData.ModelState["FeeUkEu"].Errors.Any();
   var fee_iternational = ViewData.ModelState["FeeInternational"] != null && ViewData.ModelState["FeeInternational"].Errors.Any();
