Add org enrichment status to show view

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -145,7 +145,7 @@
             <div class="govuk-tag govuk-tag--blank">empty</div>
             break;
           case WorkflowStatus.SubsequentDraft:
-            <div class="govuk-tag govuk-tag--draft">draft</div>
+            <div class="govuk-tag govuk-tag--empty">draft</div>
             break;
           case WorkflowStatus.Published:
             <div class="govuk-tag govuk-tag--published">published</div>
