--- a/src/ui/Assets/Styles/components/_publish-tags.scss
+++ b/src/ui/Assets/Styles/components/_publish-tags.scss
@@ -1,4 +1,4 @@
-.govuk-tag--blank {
+.govuk-tag--empty {
   background: govuk-colour("white");
   color: govuk-colour("grey-1");
   border: 2px solid govuk-colour("grey-2");
