Revert "Move subject code next to subject name"
This reverts commit 6dc528c715dc179c554ed54cf2ba4c046c326edb.

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -67,8 +67,8 @@ $govuk-global-styles: true;
     text-align: right;
   }
 
-  &__subject-col {
-    width: 35%;
+  &__code-col {
+    width: 5%;
   }
 
   .govuk-table__row:last-child {
