Revert "Add org enrichment status to show view"
This reverts commit 187216b262602c5f8f4f8f310390be67bc2fe411.

--- a/src/ui/Assets/Styles/components/_publish-tags.scss
+++ b/src/ui/Assets/Styles/components/_publish-tags.scss
@@ -1,4 +1,4 @@
-.govuk-tag--empty {
+.govuk-tag--blank {
   background: govuk-colour("white");
   color: govuk-colour("grey-1");
   border: 2px solid govuk-colour("grey-2");
