--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -28,7 +28,7 @@
       <h2 class="govuk-heading-l">Step 1. About your organisation</h2>
       <p class="govuk-body">You need to add a description of your organisation - this is a chance to tell applicants why they should train with you. You should also say what you do for candidates with disabilities and other needs, and check your contact details to make sure they're correct.</p>
       <p class="govuk-body">Once you’ve published your organisation information, it will show on each of your course pages. You’ll have to add your course details separately in Step 2 below.</p>
-      <p class="govuk-body"><strong class="govuk-tag govuk-tag--@Model.Status.ToLower() govuk-tag--inline">@Model.Status</strong> <a class="govuk-link" href="@Url.Action("About", "Organisation")">Fill in your organisation information</a></p>
+      <p class="govuk-body"><a class="govuk-link" href="@Url.Action("About", "Organisation")">Fill in your organisation information</a></p>
     </div>
   </div>
 
@@ -82,7 +82,7 @@
                 @switch(course.EnrichmentWorkflowStatus)
                 {
                   case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Draft:
-                    <div class="govuk-tag govuk-tag--inline govuk-tag--empty">draft</div>
+                    <div class="govuk-tag govuk-tag--inline govuk-tag--draft">draft</div>
                     break;
                   case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Published:
                     <div class="govuk-tag govuk-tag--inline govuk-tag--published">published</div>
