Show org enrichment on org show view

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -142,7 +142,7 @@
         @switch(courseEnrichment.DeterminePublicationState())
         {
           case WorkflowStatus.Blank:
-            <div class="govuk-tag govuk-tag--blank">empty</div>
+            <div class="govuk-tag govuk-tag--empty">empty</div>
             break;
           case WorkflowStatus.SubsequentDraft:
             <div class="govuk-tag govuk-tag--draft">draft</div>
