--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -103,7 +103,7 @@
         @switch(workflowStatus)
         {
           case WorkflowStatus.Blank :
-            <strong class="govuk-tag govuk-tag--blank">Empty</strong>
+            <strong class="govuk-tag govuk-tag--empty">Empty</strong>
             <p class="govuk-body">You need to complete and publish this information.</p>
 
             @if (Model.AllowPreview)
