Move subject code next to subject name

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -82,8 +82,8 @@ $govuk-global-styles: true;
     text-align: right;
   }
 
-  &__code-col {
-    width: 5%;
+  &__subject-col {
+    width: 35%;
   }
 
   .govuk-table__row:last-child {
