--- a/src/ui/Views/Course/About.cshtml
+++ b/src/ui/Views/Course/About.cshtml
@@ -7,6 +7,7 @@
 }
 
 <a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
+@await Html.PartialAsync("CopyCourseContentMessage")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   <div class="govuk-grid-row">
