--- a/src/ui/Views/Course/Preview.cshtml
+++ b/src/ui/Views/Course/Preview.cshtml
@@ -2,7 +2,7 @@
 
  @{
   Layout = "_Layout";  
-  ViewBag.Title = $"Preview of course {Model.Course.Name} ({Model.Course.ProgrammeCode})"
+  ViewBag.Title = $"Preview of course {Model.Course.Name} ({Model.Course.ProgrammeCode})";
 }
 
 <!-- CourseDetails is a dependency from SearchAndCompareUi.Shared -->
