typo field --> fields

--- a/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
@@ -11,7 +11,7 @@
     </h2>
     
     <p class="govuk-body">
-      We&#8217;ve copied these field from @copiedFrom?.Name (@copiedFrom?.ProgrammeCode):
+      We&#8217;ve copied these fields from @copiedFrom?.Name (@copiedFrom?.ProgrammeCode):
     </p>
     
     <ul class="govuk-list govuk-list--bullet">
