Clean up warning message

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -13,6 +13,7 @@ $govuk-global-styles: true;
 @import "patterns/course-parts";
 @import "patterns/success-summary";
 @import "patterns/notice-summary";
+@import "patterns/warning-summary";
 @import "patterns/definition-list";
 @import "patterns/currency-input";
 
