--- a/src/ui/Assets/Styles/patterns/_warning-summary.scss
+++ b/src/ui/Assets/Styles/patterns/_warning-summary.scss
@@ -1,16 +1,16 @@
-.govuk-success-summary {
+.govuk-warning-summary {
   @extend .govuk-error-summary;
-  border-color: govuk-colour("green");
+  border-color: govuk-colour("orange");
 
   *:last-child {
     margin-bottom: 0;
   }
 }
 
-.govuk-success-summary__title {
+.govuk-warning-summary__title {
   @extend .govuk-error-summary__title;
 }
 
-.govuk-success-summary__body {
+.govuk-warning-summary__body {
   @extend .govuk-error-summary__body;
 }
