Warn user of unsaved changes when leaving page

--- a/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
@@ -5,7 +5,7 @@
 
 @if(copied != null && copied.Any())
 {
-  <div class="govuk-warning-summary" role="alert" aria-labelledby="success-summary-heading">
+  <div class="govuk-warning-summary" role="alert" aria-labelledby="success-summary-heading" data-module="copy-course-warning">
     <h2 class="govuk-warning-summary__title" id="success-summary-heading">
       Your changes are not yet saved
     </h2>
