Refactor grid after bad merge

--- a/src/ui/Views/Course/About.cshtml
+++ b/src/ui/Views/Course/About.cshtml
@@ -8,17 +8,21 @@
 }
 
 <a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
-@await Html.PartialAsync("CopyCourseContentMessage")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
+  @await Html.PartialAsync("CopyCourseContentMessage")
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">@Model.CourseInfo.Name (@Model.CourseInfo.ProgrammeCode)</span>
+        About this course
+      </h1>
+      @await Html.PartialAsync("ErrorSummary")
+    </div>
+  </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form asp-controller="Course" asp-action="About" method="post" data-module="form">
-        <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-xl">@Model.CourseInfo.Name (@Model.CourseInfo.ProgrammeCode)</span>
-          About this course
-        </h1>
-        @await Html.PartialAsync("ErrorSummary")
          <p class="govuk-body">Give applicants a short description of the course.</p>
         <p class="govuk-body">You could include:</p>
         <ul class="govuk-list govuk-list--bullet">
