--- a/src/ui/Views/Course/Requirements.cshtml
+++ b/src/ui/Views/Course/Requirements.cshtml
@@ -1,6 +1,6 @@
 @model CourseRequirementsEnrichmentViewModel
 @{
-  Layout = "_Layout";  
+  Layout = "_Layout";
   ViewBag.Title = $"Requirements for course {Model.CourseInfo.Name} ({Model.CourseInfo.ProgrammeCode})";
   var qualifications = ViewData.ModelState["Qualifications"] != null && ViewData.ModelState["Qualifications"].Errors.Any();
   var personal_qualities = ViewData.ModelState["PersonalQualities"] != null && ViewData.ModelState["PersonalQualities"].Errors.Any();
@@ -8,17 +8,21 @@
 }
 
 <a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
-@await Html.PartialAsync("CopyCourseContentMessage")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
+  @await Html.PartialAsync("CopyCourseContentMessage")
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">@Model.CourseInfo.Name (@Model.CourseInfo.ProgrammeCode)</span>
+        Requirements and eligibility
+      </h1>
+      @await Html.PartialAsync("ErrorSummary")
+    </div>
+  </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form asp-controller="Course" asp-action="Requirements" method="post" data-module="form">
-        <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-xl">@Model.CourseInfo.Name (@Model.CourseInfo.ProgrammeCode)</span>
-          Requirements and eligibility
-        </h1>
-        @await Html.PartialAsync("ErrorSummary")
         <h3 class="govuk-heading-l">Qualifications needed</h3>
         <p class="govuk-body">State the minimum academic qualifications needed for this course.</p>
         <div class="govuk-character-count" data-module="character-count" data-maxwords="100">
