--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -7,9 +7,9 @@
 }
 
 <a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
-@await Html.PartialAsync("CopyCourseContentMessage")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
+  @await Html.PartialAsync("CopyCourseContentMessage")
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
@@ -17,6 +17,10 @@
         Course length and fees
       </h1>
       @await Html.PartialAsync("ErrorSummary")
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       <form asp-controller="Course" asp-action="Salary" method="post" data-module="form">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
