Reduce impact of "New and not yet running"
The banner is of less importance now that fields can be edited while it's new. The status and the column on the index suffice.

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -20,29 +20,15 @@
     @Model.Course.Name (@Model.Course.ProgrammeCode)
   </h1>
 
-  @if(Model.Course.StatusAsEnum != CourseVariantStatus.Running)
+  @if(Model.Course.StatusAsEnum == CourseVariantStatus.NotRunning)
   {
     <div class="govuk-notice-summary" role="alert">
       <h3 class="govuk-notice-summary__title">
-        @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
-        {
-          <text>This course is new and not yet running.</text>
-        }
-        else
-        {
-          <text>This course is not running.</text>
-        }
+        This course is not running.
       </h3>
       <div class="govuk-notice-summary__body">
         <p class="govuk-body">
-          @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
-          {
-            <text>It won&#8217;t appear online until one or more training locations are set to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</text>
-          }
-          else
-          {
-            <text>It won&#8217;t appear online. You can publish it by changing the status of one or more training locations to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</text>
-          }
+          It won&#8217;t appear online. You can publish it by changing the status of one or more training locations to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.
         </p>
       </div>
     </div>
@@ -51,6 +37,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
+        @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
+        {
+          <div class="course-parts__item">
+            <h3 class="course-parts__title">This course is new and not yet running.</h3>
+            <p class="govuk-body">It won&#8217;t appear online until one or more training locations are set to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</p>
+          </div>
+        }
         <div class="course-parts__item">
           <h3 class="course-parts__title">Information from UCAS</h3>
 
