--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -20,15 +20,29 @@
     @Model.Course.Name (@Model.Course.ProgrammeCode)
   </h1>
 
-  @if(Model.Course.StatusAsEnum == CourseVariantStatus.NotRunning)
+  @if(Model.Course.StatusAsEnum != CourseVariantStatus.Running)
   {
     <div class="govuk-notice-summary" role="alert">
       <h3 class="govuk-notice-summary__title">
-        This course is not running.
+        @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
+        {
+          <text>This course is new and not yet running.</text>
+        }
+        else
+        {
+          <text>This course is not running.</text>
+        }
       </h3>
       <div class="govuk-notice-summary__body">
         <p class="govuk-body">
-          It won&#8217;t appear online. You can publish it by changing the status of one or more training locations to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.
+          @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
+          {
+            <text>It won&#8217;t appear online until one or more training locations are set to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</text>
+          }
+          else
+          {
+            <text>It won&#8217;t appear online. You can publish it by changing the status of one or more training locations to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</text>
+          }
         </p>
       </div>
     </div>
@@ -37,13 +51,6 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
-        @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
-        {
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">This course is new and not yet running.</h3>
-            <p class="govuk-body">It won&#8217;t appear online until one or more training locations are set to &ldquo;running&rdquo; in <a href='https://update.ucas.co.uk/netupdate2/Welcome.htm'>UCAS web-link</a>.</p>
-          </div>
-        }
         <div class="course-parts__item">
           <h3 class="course-parts__title">Information from UCAS</h3>
 
