Use warning component for unpublished course

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -78,3 +78,12 @@ $govuk-global-styles: true;
     }
   }
 }
+
+.govuk-warning-text {
+  margin-bottom: 0;
+
+  + .govuk-body {
+    padding-left: govuk-spacing(8);
+    margin-bottom: govuk-spacing(6);
+  }
+}
