fix class name to be a modifier

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -79,7 +79,7 @@ $govuk-global-styles: true;
   }
 }
 
-.govuk-warning-text {
+.govuk-warning-text--inline {
   margin-bottom: 0;
 
   + .govuk-body {
