--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -28,7 +28,7 @@
 
           @if(Model.Course.StatusAsEnum != CourseVariantStatus.Running)
           {
-            <div class="govuk-warning-text">
+            <div class="govuk-warning-text govuk-warning-text--inline">
               <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
               <strong class="govuk-warning-text__text">
                 @if(Model.Course.StatusAsEnum == CourseVariantStatus.New)
