--- a/src/ui/Views/Course/Shared/ErrorSummary.cshtml
+++ b/src/ui/Views/Course/Shared/ErrorSummary.cshtml
@@ -4,7 +4,7 @@
 
 @if (!@ViewContext.ModelState.IsValid)
 {
-    <div class="govuk-error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
+    <div class="govuk-error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1" data-module="error-summary">
         <h2 class="govuk-heading-m govuk-error-summary__title" id="error-summary-heading">
             You&#8217;ll need to correct some information.
         </h2>
