--- a/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
@@ -5,8 +5,8 @@
 
 @if(copied != null && copied.Any())
 {
-  <div class="govuk-warning-summary" role="alert" aria-labelledby="success-summary-heading" data-module="copy-course-warning">
-    <h2 class="govuk-warning-summary__title" id="success-summary-heading">
+  <div class="govuk-warning-summary" aria-labelledby="warning-summary-heading" tabindex="-1" data-module="error-summary" data-module="copy-course-warning" role="alert">
+    <h2 class="govuk-warning-summary__title" id="warning-summary-heading">
       Your changes are not yet saved
     </h2>
     <div class="govuk-warning-summary__body">
