--- a/src/ui/Views/Shared/CopyCourseContent.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContent.cshtml
@@ -17,9 +17,14 @@ else
       <label class="govuk-label govuk-label--s" for="copy-from">Copy from</label>
       <select id="copy-from" name="copyFrom" class="govuk-select">
         <option value="" selected="selected">Pick a course</option>
-        @foreach(var copyable in copyables)
+        @foreach(var copyableSet in copyables.GroupBy(x => x.AccreditingProviderName))
         {
-          <option value="@copyable.CourseCode">@copyable.Name (@copyable.CourseCode)</option>
+          <optgroup label="@copyableSet.Key">
+            @foreach(var copyable in copyableSet)
+            {
+              <option value="@copyable.CourseCode">@copyable.Name (@copyable.CourseCode)</option>
+            }
+          </optgroup>
         }
       </select>
     </div>
