--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -24,7 +24,7 @@
             @if (course_length) {
               <span asp-validation-for="CourseLength" class="govuk-error-message"></span>
             }
-              <div class="govuk-radios">
+              <div class="govuk-radios" data-module="radios">
                 @{
                     var options = CourseLengthHelper.Lookup;
 
@@ -39,10 +39,10 @@
                           <input type="radio" id="@keyString" class="govuk-radios__input" asp-for="@Model.CourseLength" check="@optionChecked" value="@option.Key" data-aria-controls="other-container"/>
                           <label for="@keyString" class="govuk-label govuk-radios__label">@option.Value</label>
                         </div>
-                        <div class="govuk-radios__conditional" id="other-container">
-                          <div class"form-group">
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="other-container">
+                          <div class="form-group">
                             <label asp-for="CourseLengthOther" class="govuk-label">Course Length</label>
-                            <input asp-for="CourseLengthOther" type="text" class="govuk-currency-input__inner__input govuk-input govuk-input--width-10" />
+                            <input asp-for="CourseLengthOther" type="text" class="govuk-input govuk-!-width-one-half" />
                           </div>
                         </div>
                       }
@@ -57,7 +57,7 @@
                   }
                 }
               </div>
-                            
+
 
           </fieldset>
         </div>
