Fix remaining broken links

--- a/src/ui/Views/Course/Requirements.cshtml
+++ b/src/ui/Views/Course/Requirements.cshtml
@@ -62,7 +62,7 @@
           <input type="submit" class="govuk-button" value="Save">
         </div>
          <p class="govuk-body">
-          <a href="@Url.Action("Variants", "Course", Model.RouteData)" class "govuk-link">Cancel changes</a>
+          <a href="@Url.Action("Show", "Course", Model.RouteData)" class "govuk-link">Cancel changes</a>
         </p>
       </form>
     </div>
