--- a/src/ui/Views/Course/About.cshtml
+++ b/src/ui/Views/Course/About.cshtml
@@ -7,7 +7,7 @@
   var school_placement = ViewData.ModelState["HowSchoolPlacementsWork"] != null && ViewData.ModelState["HowSchoolPlacementsWork"].Errors.Any();
 }
 
-<a href="@Url.Action("Variants", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
+<a href="@Url.Action("Show", "Course", Model.RouteData)" class="govuk-back-link">Back</a>
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @await Html.PartialAsync("CopyCourseContentMessage")
@@ -86,7 +86,7 @@
           <input type="submit" class="govuk-button" value="Save">
         </div>
          <p class="govuk-body">
-          <a href="@Url.Action("Variants", "Course", Model.RouteData)" class "govuk-link">Cancel changes</a>
+          <a href="@Url.Action("Show", "Course", Model.RouteData)" class "govuk-link">Cancel changes</a>
         </p>
       </form>
     </div>
